# valvula-mod-pquota

./: AUTHORS  ChangeLog  Makefile.am  README  README.pbuilder  autogen.sh  configure.ac
debian/: changelog  control  rules  shlibs.local  valvulad-mod-pquota.dirs  valvulad-mod-pquota.install
src/: Makefile.am  mod-pquota.c  mod-pquota.h  mod-pquota.xml
